removed brackets from path

--- a/styles/blocks/_formats.scss
+++ b/styles/blocks/_formats.scss
@@ -107,7 +107,7 @@
 
             .format-info-item {
               padding-left: rem(30);
-              background-image: url("/icons/checkmark.svg");
+              background-image: url(/icons/checkmark.svg);
               background-repeat: no-repeat;
               background-position: 0 -1px;
 
