added relative path without brackets

--- a/styles/blocks/_about.scss
+++ b/styles/blocks/_about.scss
@@ -48,7 +48,7 @@
         &-list {
           > li {
             padding-left: rem(24);
-            background-image: url(/icons/checkmark.svg);
+            background-image: url(../../icons/checkmark.svg);
             background-repeat: no-repeat;
             background-position: 0 1px;
             background-size: 16px;
