--- a/styles/blocks/_hero.scss
+++ b/styles/blocks/_hero.scss
@@ -2,8 +2,8 @@
 
 .hero {
   background: url(../images/section-hero.jpg) 0 45% / cover no-repeat;
-  width: 100dvw;
-  height: 100dvh;
+  width: 100%;
+  height: 100vh;
   @include flex-center(true);
   flex-direction: column;
   position: relative;
