--- a/styles/main.css
+++ b/styles/main.css
@@ -272,8 +272,8 @@ li:has(> a):active {
 
 .hero {
   background: url(../images/section-hero.jpg) 0 45%/cover no-repeat;
-  width: 100dvw;
-  height: 100dvh;
+  width: 100%;
+  height: 100vh;
   display: inline-flex;
   justify-content: center;
   align-items: center;
